Add function calls and if statements