@@ -2,30 +2,59 @@ package dev.clng.interpreter;
 
 import dev.clng.common.Tuple;
 import dev.clng.token.DataTokenType;
+import dev.clng.token.LiteralTokenType;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
 
 public class RuntimeContext {
     private static Map<String, Tuple<DataTokenType, String>> memory = new HashMap<>();
+    private static Map<String, Tuple<DataTokenType, String>> locals = new HashMap<>();
 
     public static void addVariable(String name, DataTokenType type, String value) {
         memory.put(name, new Tuple<>(type, value));
     }
 
-    public static void updateVariable(String name, String value) {
-        memory.put(name, new Tuple<>(memory.get(name).v1(), value));
+    public static void addLocalVariable(String name, DataTokenType type, String value) {
+        locals.put(name, new Tuple<>(type, value));
     }
 
-    public static Map<String, Tuple<DataTokenType, String>> getMemory() {
-        return memory;
+    public static void updateVariable(String name, String value) {
+        if (locals.containsKey(name)) {
+            locals.put(name, new Tuple<>(locals.get(name).v1(), value));
+        } else if (memory.containsKey(name)) {
+            memory.put(name, new Tuple<>(memory.get(name).v1(), value));
+        } else {
+            var providedType = Arrays.stream(LiteralTokenType.values())
+                    .filter(ltt -> value.matches(ltt.getPattern()))
+                    .findFirst()
+                    .orElseThrow(() -> new RuntimeException("Invalid argument type '%s'".formatted(value)));
+
+            locals.put(name, new Tuple<>(convert(providedType), value));
+        }
+    }
+
+    private static DataTokenType convert(LiteralTokenType ltt) {
+        return Arrays.stream(DataTokenType.values())
+                .filter(dtt -> dtt.name().equals(ltt.name()))
+                .findFirst()
+                .orElseThrow();
+    }
+
+    public static void clearLocal(String name) {
+        locals.remove(name);
     }
 
     public static Object retrieveVar(String name) {
-        var val = memory.get(name);
+        Tuple<DataTokenType, String> val = locals.get(name);
 
         if (val == null) {
-            throw new IllegalStateException(String.format("Variable '%s' not found", name));
+            val = memory.get(name);
+        }
+
+        if (val == null) {
+            throw new IllegalStateException("Variable '%s' not found".formatted(name));
         }
 
         switch (val.v1()) {
@@ -48,9 +77,5 @@ public class RuntimeContext {
                 return null;
             }
         }
-    }
-
-    public static <X> X getVariable(String name) {
-        return (X) retrieveVar(name);
     }
 }
